--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,46 @@
 body {
   line-height: 1.5;
 
-  /* Full Page Background Receipe */
+  /* Full Page Background Recipe */
+  background: url('../images/daft-sam.gif');
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
+
+  padding: 15px;
+  border-radius: 25px;
+  text-align: center;
+
+  font-family: 'Lato', sans-serif;
+  line-height: 1.5;
+  color: white;
+
+  font-size: 10px;
+  color: red;
 }
 
 .container {
   width: 500px;
+  border-radius: 40px;
+  background: rgba(0,0,0,0.5);
+  padding: 15px;
   margin: 40px;
+  /*margin: 0 auto;*/
+  background: black;
+  float: right;
+}
+
+h1 {
+  font-size: 80px;
+  margin-bottom: -50px;
+  color: blue;
+}
+
+h2 {
+  font-size: 30px;
+}
+
+a {
+  color: #BFE35B;
+  text-decoration: none;
 }
