--- a/bootstrap-landingpage/css/main.css
+++ b/bootstrap-landingpage/css/main.css
@@ -1,3 +1,43 @@
-/*----------------------------------------------------------------------------- 
-=MAIN STYLES  
+/*-----------------------------------------------------------------------------
+=MAIN STYLES
 -----------------------------------------------------------------------------*/
+
+.navbar {
+  margin-bottom: 0;
+}
+
+.container img {
+  width: 100%;
+}
+
+h2.featurette-heading {
+  font-weight: 300;
+  text-align: center;
+}
+
+.lead {
+  text-align: center;
+}
+
+
+.companies img {
+  margin: 50px 0;
+}
+
+footer {
+  background: url('../images/grey-texture.jpg');
+  padding: 40px;
+}
+
+.companies h3 {
+  margin-bottom: 40px;
+}
+
+.companies img {
+  margin: 50px 0;
+}
+
+footer {
+  background: url('../images/grey-texture.jpg');
+  padding: 40px;
+}
